# Multithread-Downloader

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  downloader.css  downloader.db  downloader.ui  downloader_new_task.ui  main.c
include/: basics.h
include/common/: http_common.h  http_manager.h  sqlite_manager.h  threadpool_manager.h
include/model/: database_common.h  request_api.h  task_info.h
include/ui/: ui_download_task.h  ui_main.h  ui_new_task.h  ui_task_list.h
include/utils/: file_utils.h  object_util.h  string_utils.h  ui_utils.h  unit_util.h
src/common/: http_manager.c  sqlite_manager.c  threadpool_manager.c
src/model/: database_common.c  request_api.c  task_info.c
src/ui/: ui_download_task.c  ui_main.c  ui_new_task.c  ui_task_list.c
src/utils/: file_utils.c  object_util.c  string_utils.c  ui_utils.c  unit_util.c
